# QUARTSx

./: .gitignore  Cargo.toml  README.md  SmartSeq3xpressAdapter.fa  env.tested.txt  env.yaml  quartsx.sh  test_config.yaml
R/: finalize.R  qc_report.R
src/: bam.rs  barcode.rs  config.rs  count.rs  dedup.rs  filter.rs  gtf.rs  log.rs  main.rs  orchestrator.rs  trim.rs
testdata/: annot.gtf  cells_96.csv
testdata/STARidx/: Genome  Log.out  SA  SAindex  chrLength.txt  chrName.txt  chrNameLength.txt  chrStart.txt  genomeParameters.txt
