[package]
name = "quartsx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quartsx"
path = "src/main.rs"

[dependencies]
needletail = "0.5"
noodles = { version = "0.85", features = ["bam", "sam", "bgzf"] }
coitrees = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
anyhow = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
